--- a/style.css
+++ b/style.css
@@ -3,12 +3,9 @@ body {
   margin: 0;
 }
 
-h1 {
-  position: absolute;
+.header-title {
   width: 133px;
   height: 25px;
-  left: 77px;
-  top: 40px;
 
   font-family: "Inconsolata";
   font-style: normal;
@@ -21,24 +18,23 @@ h1 {
   color: #333333;
 }
 
-img {
+.scarecrow {
   height: 448px;
-  width: 540px;
+  min-width: 540px;
   border-radius: 0px;
   margin-right: 120px;
   margin-top: 2.8rem;
 }
 
-.main-texts-container h2 {
-  width: 586px;
-  height: 190px;
+.text-title {
+  max-width: 586px;
+  width: 100%;
   margin-bottom: 36px;
 
   font-family: "Space Mono";
   font-style: normal;
   font-weight: 700;
-  font-size: 64px;
-  line-height: 95px;
+  font-size: 3.5rem;
   letter-spacing: -0.035em;
 
   /* Gray 1 */
@@ -46,16 +42,14 @@ img {
   color: #333333;
 }
 
-.main-texts-container p {
-  width: 381px;
-  height: 108px;
+.text-content {
+  max-width: 381px;
   margin-bottom: 64px;
 
   font-family: "Space Mono";
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
-  line-height: 36px;
   letter-spacing: -0.035em;
 
   /* Gray 2 */
@@ -65,6 +59,7 @@ img {
 
 .header-container {
   height: 40px;
+  padding: 40px;
 }
 
 .main-container {
@@ -72,17 +67,18 @@ img {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  height: calc(100vh - 64px);
+  min-height: calc(100vh - 144px);
+  height: auto;
 }
 
 .footer-container {
   display: flex;
   justify-content: center;
-  height: 24px;
+  max-height: 24px;
 }
 
 .back-to-home {
-  font-size: 14px;
+  font-size: 1rem;
   font-weight: 700;
   font-style: normal;
   font-family: "Space Mono";
@@ -93,6 +89,10 @@ img {
   color: #fff;
   background-color: #333;
   display: inline-block;
+  margin-bottom: 48px;
+  width: 180px;
+  text-align: center;
+  padding: 18px;
 }
 
 @-webkit-keyframes hvr-bob {
@@ -161,12 +161,51 @@ img {
   animation-direction: normal, alternate;
 }
 
-span {
-  font-family: "Montserrat", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
+.github-anchor {
+  text-decoration: none;
   color: #bdbdbd;
 }
 
+.footer-text {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.8rem;
+
+  color: #bdbdbd;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 660px) {
+  .scarecrow {
+    margin-right: 0;
+    min-width: 100%;
+    height: auto;
+  }
+
+  .text-title {
+    text-align: center;
+  }
+
+  .text-content {
+    text-align: center;
+    max-width: 100%;
+  }
+
+  .back-to-home {
+    width: 150px;
+  }
+
+  .info-container {
+    align-items: center;
+    flex-direction: column;
+  }
+  .footer-text {
+    text-align: center;
+    font-size: 0.7rem;
+  }
+}
